mejoras de funcionamiento e interfaz en listado y creacion de cursos dentro de un ciclo escolar

--- a/src/main/resources/templates/courses/create.html
+++ b/src/main/resources/templates/courses/create.html
@@ -57,6 +57,10 @@
                                         <div class="control">
                                             <div class="select">
                                                 <select th:field="*{manager.id}">
+                                                    <option th:unless="${managers.size()} > 0" th:value="0" disabled
+                                                        th:text="#{ui.courses.create.form.manager.empty}"></option>
+                                                    <option th:value="0"
+                                                        th:text="#{ui.courses.create.form.manager.nomanager}"></option>
                                                     <option th:each="manager : ${managers}" th:value="${manager.id}"
                                                         th:text="${manager.fullname}"></option>
                                                 </select>
@@ -75,6 +79,11 @@
                                         <div class="control">
                                             <div class="select">
                                                 <select th:field="*{classroom.id}">
+                                                    <option th:value="0" th:unless="${classrooms.size()} > 0"
+                                                        th:text="#{ui.courses.create.form.classroom.empty}"></option>
+                                                    <option th:value="0"
+                                                        th:text="#{ui.courses.create.form.classroom.noclassroom}">
+                                                    </option>
                                                     <option th:each="classroom : ${classrooms}"
                                                         th:value="${classroom.id}" th:text="${classroom.name}"></option>
                                                 </select>
@@ -88,7 +97,8 @@
                                 <div class="field-body">
                                     <div class="field">
                                         <div class="control">
-                                            <button type="submit" class="button is-info" th:text="#{ui.common.button.save}"></button>
+                                            <button type="submit" class="button is-info"
+                                                th:text="#{ui.common.button.save}"></button>
                                         </div>
                                     </div>
                                 </div>
