--- a/src/main/resources/templates/courses/show.html
+++ b/src/main/resources/templates/courses/show.html
@@ -67,6 +67,14 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr th:unless="${course.subjects.size()} > 0">
+                                    <td colspan="8" class="has-text-centered">
+                                        <span class="has-text-grey px-2"
+                                            th:text="#{ui.courses.show.table.subject.empty}"></span>
+                                        <a th:href="@{/subjects/create(cid=${course.id})}"
+                                            th:text="#{ui.courses.links.addSubject}">0w</a>
+                                    </td>
+                                </tr>
                                 <tr th:each="subject : ${course.subjects}">
                                     <td th:text="${subject.name}"></td>
                                     <td th:text="${subject.classroom.name}"></td>
@@ -90,12 +98,14 @@
                                     <td th:text="${subject.schedule.startTime}"></td>
                                     <td th:text="${subject.schedule.endTime}"></td>
                                     <td>
-                                        <a class="button is-info is-light" th:href="@{/subjects/{subjectId}/edit(subjectId=${subject.id})}">
+                                        <a class="button is-info is-light"
+                                            th:href="@{/subjects/{subjectId}/edit(subjectId=${subject.id})}">
                                             <span class="icon"><i class="fas fa-edit"></i></span>
                                         </a>
                                     </td>
                                     <td>
-                                        <a class="button is-danger is-light" th:href="@{/subjects/{subjectId}/delete(subjectId=${subject.id})}">
+                                        <a class="button is-danger is-light"
+                                            th:href="@{/subjects/{subjectId}/delete(subjectId=${subject.id})}">
                                             <span class="icon"><i class="fas fa-trash"></i></span>
                                         </a>
                                     </td>
