--- a/src/main/resources/templates/courses/show.html
+++ b/src/main/resources/templates/courses/show.html
@@ -115,7 +115,7 @@
                         <h1 class="is-size-4 has-text-centered" th:text="#{ui.courses.show.headers.students}"></h1>
                         <hr>
                         <a class="button is-link is-outlined mb-2"
-                            th:href="@{/courses/{courseId}/students/add(courseId=${course.id})}"
+                            th:href="@{/students/subscribe(cid=${course.id})}"
                             th:text="#{ui.courses.links.addStudent}"></a>
                         <table class="table is-bordered is-fullwidth is-hoverable">
                             <thead class="has-background-grey-lighter">
@@ -129,7 +129,7 @@
                                     <td colspan="2" class="has-text-centered">
                                         <span class="has-text-grey px-2"
                                             th:text="#{ui.courses.show.student.table.empty}"></span>
-                                        <a th:href="@{/courses/{courseId}/students/add(courseId=${course.id})}"
+                                        <a th:href="@{/students/subscribe(cid=${course.id})}"
                                             th:text="#{ui.courses.links.addStudent}"></a>
                                     </td>
                                 </tr>
