--- a/src/main/resources/templates/grades/registerGradeToStudent.html
+++ b/src/main/resources/templates/grades/registerGradeToStudent.html
@@ -11,9 +11,9 @@
                 th:text="${score.grade.subject.course.name}"></a></li>
         <li><a th:href="@{/subjects/{subjectId}(subjectId=${score.grade.subject.id})}"
                 th:text="${score.grade.subject.name}"></a></li>
-        <li><a th:href="@{/grades/{gradeId}/register(gradeId=${score.grade.id})}"
-                th:text="#{ui.breadcrumb.grades.register(${score.grade.description})}"></a></li>
-        <li class="is-active"><a th:text="${score.student.fullname}"></a></li>
+        <li><a th:href="@{/grades/{gradeId}(gradeId=${score.grade.id})}"
+                th:text="${score.grade.description}"></a></li>
+        <li class="is-active"><a th:text="#{ui.breadcrumb.registerGradeToStudent.register(${score.student.fullname})}"></a></li>
     </ul>
 
     <section class="section">
@@ -25,7 +25,7 @@
                 <div class="panel-block has-background-white">
                     <div class="container">
                         <form th:method="POST"
-                            th:action="@{/grades/{gradeId}/register/{studentId}(gradeId=${score.grade.id}, studentId=${score.student.id})}"
+                            th:action="@{/grades/{gradeId}/register/(gradeId=${score.grade.id},sid=${score.student.id})}"
                             th:object="${score}" autocomplete="off">
                             <input type="hidden" th:field="*{student.id}" />
                             <input type="hidden" th:field="*{grade.id}" />
