--- a/src/main/resources/templates/schedules/create.html
+++ b/src/main/resources/templates/schedules/create.html
@@ -7,7 +7,7 @@
         <li><a th:href="@{/courses(id=${schedule.subject.course.cycle.id})}" th:text="${schedule.subject.course.cycle.name}"></a></li>
         <li><a th:href="@{/courses/{courseId}(courseId=${schedule.subject.course.id})}" th:text="${schedule.subject.course.name}"></a></li>
         <li><a th:href="@{/subjects/{subjectId}(subjectId=${schedule.subject.id})}" th:text="${schedule.subject.name}"></a></li>
-        <li class="is-active"><a th:text="#{ui.common.actions.edit}"></a></li>
+        <li class="is-active"><a th:text="#{ui.breadcrumb.schedules.create}"></a></li>
     </ul>
 
     <section class="section">
