--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="field is-horizontal">
                                 <div class="field-label is-normal">
-                                    <label class="label" for="username"
+                                    <label class="label" th:for="*{username}"
                                         th:text="#{ui.users.create.form.username}"></label>
                                 </div>
                                 <div class="field-body">
@@ -83,7 +83,24 @@
                             </div>
                             <div class="field is-horizontal">
                                 <div class="field-label is-normal">
-                                    <label class="label" for="password" th:text="#{ui.users.create.form.email}"></label>
+                                    <label th:for="*{active}" class="label" th:text="#{ui.users.edit.form.active}"></label>
+                                </div>
+                                <div class="field-body">
+                                    <div class="field">
+                                        <div class="control">
+                                            <div class="select">
+                                                <select th:field="*{active}">
+                                                    <option th:value="1" th:text="#{ui.users.edit.form.active}"></option>
+                                                    <option th:value="0" th:text="#{ui.users.edit.form.disabled}"></option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="field is-horizontal">
+                                <div class="field-label is-normal">
+                                    <label class="label" th:for="*{email}" th:text="#{ui.users.create.form.email}"></label>
                                 </div>
                                 <div class="field-body">
                                     <div class="field">
